@startuml

title __STOCK_API's Class Diagram__\n

  namespace com.cs360.simplestocks.stock_api {
    class com.cs360.simplestocks.stock_api.AlphaVantageConnector {
        {static} - BASE_URL : String
        - apiKey : String
        - timeOut : int
        + AlphaVantageConnector()
        + getRequest()
        - getParameters()
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    interface com.cs360.simplestocks.stock_api.ApiConnector {
        {abstract} + getRequest()
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    class com.cs360.simplestocks.stock_api.DigitalCurrencies {
        + DigitalCurrencies()
        + daily()
        + intraDay()
        + monthly()
        + weekly()
    }
  }
  

  namespace com.cs360.simplestocks.stock_api {
    class com.cs360.simplestocks.stock_api.SectorPerformances {
        + SectorPerformances()
        + sector()
    }
  }
  

  com.cs360.simplestocks.stock_api.AlphaVantageConnector .up.|> com.cs360.simplestocks.stock_api.ApiConnector
  com.cs360.simplestocks.stock_api.DigitalCurrencies o-- com.cs360.simplestocks.stock_api.ApiConnector : apiConnector
  com.cs360.simplestocks.stock_api.SectorPerformances o-- com.cs360.simplestocks.stock_api.ApiConnector : apiConnector


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
